# kivy_projects

./: README.md
Calculator/: main.py  pyproject.toml
Task/: database.py  main.kv  main.py  pyproject.toml  todo.db
